# python-mcollective

./: .coveragerc  .gitignore  .gitmodules  .pylintrc  .ruby-gemset  .ruby-version  .travis.yml  Gemfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  Vagrantfile  check_mc.py  index.rst  mcollective.py  pytest.ini  requirements.txt  server.23x.activemq.ssl.cfg  setup.cfg  setup.py  test.py  test_client.cfg  test_config.py  test_filter.py  test_message.py  test_signing.py  test_simplerpc.py  testkey-public.pem  tox.ini
chef/: dna.json  solo.rb
docs/: Makefile
docs/source/: api.rst  conf.py  hacking.rst  index.rst  readme.rst  tests.rst
examples/: client.ssl.22x.cfg  server.22x.cfg  server.23x.activemq.cfg  server.23x.activemq.ssl.cfg  server.23x.rabbitmq.cfg  server.ssl.22x.cfg  simple_action.py
pymco/: __init__.py  config.py  exc.py  listener.py  message.py  rpc.py  security.py  serializers.py  utils.py
pymco/connector/: __init__.py  activemq.py  rabbitmq.py  stomp.py
pymco/security/: __init__.py  none.py  ssl.py
pymco/serializers/: __init__.py  yaml.py
pymco/test/: ctxt.py  utils.py
requirements/: base.txt  flake8.txt  mac.tests.txt  tests.txt
scripts/: activemq.sh  activemq.xml  before  deps  keystore.jks  keystores.sh  local.sh  m2crypto_ubuntu  mco  mcollectived  rabbitmq.py  rabbitmq.sh  rabbitmqadmin  truststore.jks  venv
tests/: base.py  conftest.py  test.py  test_config.py  test_filter.py  test_message.py  test_signing.py  test_simplerpc.py  utils.py
tests/fixtures/: activemq.xml  activemq_cert.pem  client-public.pem  (+8 more)
tools/: server.cfg
(+72 files in other folders)
