[metadata]
name = python-mcollective
version = 0.0.1.dev7
author = Rafael Durán Castañeda
author-email = rafadurancastaneda@gmail.com
summary = Python bindings for MCollective
description-file = README.rst
license = BSD
home-page = https://github.com/rafaduran/python-mcollective
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: System :: Systems Administration
keywords =
    MCollective

[files]
packages =
    pymco
    pymco.connector
    pymco.security
    pymco.serializers
    pymco.test
